--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -1,4 +1,7 @@
 
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="./assets/js/bundle.js"></script>
 </body>
 
