:sparkles: feat: avançando no curso - criando model Login

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head') %>
-<%- include('includes/nav') %>
+  <%- include('includes/nav') %>
 
 
     <div class="container">
@@ -14,39 +14,41 @@
               <div class="alert alert-danger">Um erro qualquer!</div>
             </div>
           </div>
-          <table class="table mt-3">
-            <thead>
-              <tr>
-                <th class="text-center" scope="col">Nome</th>
-                <th class="text-center" scope="col">Último Nome</th>
-                <th class="text-center" scope="col">CPF</th>
-                <th class="text-center" scope="col">Email</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="text-center">Luiz</td>
-                <td class="text-center">Gomes</td>
-                <td class="text-center">3049382019</td>
-                <td class="text-center">luisgomesz@gmail.com</td>
-              </tr>
-              <tr>
-                <td class="text-center">Luiz</td>
-                <td class="text-center">Gomes</td>
-                <td class="text-center">3049382019</td>
-                <td class="text-center">luisgomesz@gmail.com</td>
-              </tr>
-              <tr>
-                <td class="text-center">Luiz</td>
-                <td class="text-center">Gomes</td>
-                <td class="text-center">3049382019</td>
-                <td class="text-center">luisgomesz@gmail.com</td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="responsive-table">
+            <table class="table mt-3">
+              <thead>
+                <tr>
+                  <th class="text-center" scope="col">Nome</th>
+                  <th class="text-center" scope="col">Último Nome</th>
+                  <th class="text-center" scope="col">CPF</th>
+                  <th class="text-center" scope="col">Email</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="text-center">Luiz</td>
+                  <td class="text-center">Gomes</td>
+                  <td class="text-center">3049382019</td>
+                  <td class="text-center">luisgomesz@gmail.com</td>
+                </tr>
+                <tr>
+                  <td class="text-center">Luiz</td>
+                  <td class="text-center">Gomes</td>
+                  <td class="text-center">3049382019</td>
+                  <td class="text-center">luisgomesz@gmail.com</td>
+                </tr>
+                <tr>
+                  <td class="text-center">Luiz</td>
+                  <td class="text-center">Gomes</td>
+                  <td class="text-center">3049382019</td>
+                  <td class="text-center">luisgomesz@gmail.com</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
 
-        
-    </div>
 
-<%- include('includes/footer') %>
+      </div>
+
+      <%- include('includes/footer') %>
