:sparkles: feat: create user

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -8,7 +8,7 @@
         <div class="col-lg-8 mt-3">
           <h1 class="text-center">Login</h1>
           <p class="text-center lead">Faça login ou crie sua conta abaixo: </p>
-
+          <%- include('includes/messages') %>
           <div class="row">
             <div class="col-lg d-flex justify-content-center flex-column align-items-start">
               <h4>Faça seu cadastro</h4>
