--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -8,9 +8,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-        <li class="nav-item">
-          <a class="nav-link" href="/login/index">Login</a>
-        </li>
+        <% if(user) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/login/Logout">Sair</a>
+          </li>
+          <% } else { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/login/index">Entrar</a>
+            </li>
+            <% } %>
 
       </ul>
 
