--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -47,7 +47,7 @@
                     aria-describedby="emailHelp">
                 </div>
 
-                <button type="submit" class="btn btn-primary">Criar minha conta</button>
+                <button type="submit" class="btn btn-primary">Conectar-se</button>
               </form>
             </div>
           </div>
