--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -8,6 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
+        <li class="nav-item">
+          <a class="nav-link" href="/contato/index">Cadastrar Contato</a>
+        </li>
+
         <% if(user) { %>
           <li class="nav-item">
             <a class="nav-link" href="/login/Logout">Sair</a>
